test/scc/type/semantic-errors/000.t
struct
{
    int a[];
    int b;
};